force-app/main/default/objects/Proposal_Scoring__c/Proposal_Scoring__c.object-meta.xml
<CustomObject>
    <label>Proposal Scoring</label>
    <nameField>
        <displayFormat>PS{0000}</displayFormat>
        <label>Score Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Scoring</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>