force-app/main/default/objects/Proposal_Scoring__c/fields/Recuse__c.field-meta.xml
<CustomField>
    <fullName>Recuse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recuse?</label>
    <type>Checkbox</type>
</CustomField>