force-app/main/default/objects/Proposal_Scoring__c/fields/Scoring_Committee_Member__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Committee_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scoring Committee Member</label>
    <referenceTo>Grants_Review_Team__c</referenceTo>
    <relationshipLabel>Proposal Scores</relationshipLabel>
    <relationshipName>Proposal_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>